# rust_tuto

./: .gitignore  Cargo.toml  README.md
guide/: Cargo.toml
guide/src/: lib.rs  main.rs  structs_def.rs
libs/: Cargo.toml
libs/src/: lib.rs
modules/: Cargo.toml
modules/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: file_mod1.rs  lib.rs  main.rs  texto.txt
src/maths/: mod.rs
src/my_mod/: mod.rs  my_mod.rs
