[package]
name = "rust_tuto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
crossbeam = "0.8.2"
thiserror ="1.0.43"
anyhow = "1.0.71"
uuid = {version = "1.4.0", features = ["v4", "serde"]}
serde = {version = "1", features = ["derive", ]}
serde_json="1"